k3s/manifests/network-policies/semaphore/semaphore-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zabbix-egress-semaphore
  namespace: automation
spec:
  podSelector:
    matchLabels:
      app: semaphore
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24
